--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+# Ignore macOS cache files
+.DS_Store
+.idea/*
+
 # Ignore bundler config.
 /.bundle
 
@@ -17,7 +21,16 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore uploads
+/public/uploads
+/public/assets
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+# Ignore node.js and yarn
 /node_modules
 /yarn-error.log
 
+# Ignore byebug
 .byebug_history
