Add Postgres database and dockerize it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,24 @@
 version: '2'
 services:
   db:
-    image: postgres
+    image: postgres:alpine
     restart: always
     environment:
+      POSTGRES_USER: username
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: application
+    ports:
+      - '5432:5432'
   web:
     build: .
     command: bundle exec puma -p 3000 -e development
     depends_on:
       - db
     environment:
+      APP_DB_HOST: db
+      APP_DB: application
+      APP_DB_USER: username
+      APP_DB_PASSWORD: password
       RAILS_ENV: development
     ports:
       - "3000:3000"
